# bit-socket-python

./: README.md  VERSION_V1_0_0.md  pyproject.toml
.github/workflows/: python.yml
bitsocket/: __init__.py
bitsocket/client/: __init__.py  client.py  namespace.py
bitsocket/protocol/: __init__.py  codec.py  constants.py  decoder.py  encoder.py  schema.py
bitsocket/server/: __init__.py  hub.py  namespace.py  server.py  socket.py  types.py
examples/: client_example.py  server_example.py
tests/: test_e2e.py  test_protocol.py  test_schema.py
