[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bit-socket-python"
version = "1.0.0"
description = "A high-performance, schema-driven, binary WebSocket framework for Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "websockets>=13.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["bitsocket*"]
